# FungiAI

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  action.cpp  action.h  cards.cpp  cards.h  debug.cpp  debug.h  decay_pile.cpp  decay_pile.h  forest.h  game_runner.cpp  game_runner.h  game_state.cpp  game_state.h  hand_structured_pile.cpp  hand_structured_pile.h  install.sh  main.cpp  nn_encoding.cpp  nn_encoding.h  nn_game_simulator.cpp  nn_game_simulator.h  nn_train.cpp  nn_train.h  pile.cpp  pile.h  player_view.cpp  player_view.h  structured_pile.cpp  structured_pile.h  test.cpp
app/: evaluate.cpp  evolutional_training.cpp  fungi_ai.cpp  gui.cpp
lib/evolutional/: CMakeLists.txt  EvolutionalNNController.cpp  EvolutionalNNController.hpp  evolutional_controller.cpp  evolutional_controller.hpp  evolutional_optimization.cpp  evolutional_optimization.hpp  random_controller.cpp  random_controller.hpp
lib/evolutional/ranking/: complete_ranking_algorithm.cpp  complete_ranking_algorithm.hpp  ranking_algorithm.cpp  ranking_algorithm.hpp
lib/evolutional/reproduction/: percentile_reproduction_strategy.cpp  percentile_reproduction_strategy.hpp  reproduction_strategy.cpp  reproduction_strategy.hpp  reproduction_trait.hpp
lib/game/: CMakeLists.txt  forest.cpp  forest.hpp  game.cpp  game.hpp  player.cpp  player.hpp
lib/game/actions/: CombinedAction.cpp  CombinedAction.hpp  action.cpp  action.hpp  action_result.cpp  action_result.hpp  actions.hpp  cook_mushrooms_action.cpp  cook_mushrooms_action.hpp  discard_action.cpp  discard_action.hpp  ignore_discard_action.cpp  ignore_discard_action.hpp  pick_action.cpp  pick_action.hpp  pick_decay_action.cpp  pick_decay_action.hpp  place_pan_action.cpp  place_pan_action.hpp  sell_mushrooms_action.cpp  sell_mushrooms_action.hpp
lib/game/cards/: card.cpp  card.hpp  card_information.hpp
lib/game/data_structures/: display.cpp  display.hpp  game_state.cpp.unused  game_state.hpp.unused  hand.cpp  hand.hpp  pile.cpp  pile.hpp  structured_pile.cpp  structured_pile.hpp
lib/game/io/: strings.cpp
lib/game/run/: controller.cpp  controller.hpp  game_runner.cpp  game_runner.hpp  random_controller.cpp  random_controller.hpp
lib/gui/: CMakeLists.txt  main_window.cpp  main_window.hpp
lib/gui/panels/: card_panel.cpp  card_panel.hpp  clickable_label.cpp  clickable_label.hpp  display_panel.cpp  display_panel.hpp  forest_panel.cpp  forest_panel.hpp  game_panel.cpp  game_panel.hpp  player_panel.cpp  player_panel.hpp  structured_pile_panel.cpp  structured_pile_panel.hpp  vector_panel.cpp  vector_panel.hpp
lib/gui/util/: gui_util.cpp  gui_util.hpp
lib/io/: strings.hpp
lib/nn/: CMakeLists.txt  NNCoder.cpp  NNCoder.hpp  NNController.cpp  NNController.hpp  nn_encoder.cpp  nn_encoder.hpp
src/: action.cpp  action.h  debug.h  game_state.cpp  hand_structured_pile.cpp  main.cpp  nn_encoding.h  nn_game_simulator.cpp  nn_train.cpp  nn_train.h  pile.h  player_view.cpp  priority_action.h  structured_pile.h
templates/: class.cpp  class.hpp
tools/: compress_numbers.py  evaluation_chart.py
unused/: action.cpp  nn_train.h  number_logger.cpp  number_logger.h  priority_action.h
